# llm-control-plane

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
deploy/: Caddyfile  Dockerfile.api  Dockerfile.cohost  Dockerfile.ui  deploy.sh  docker-compose.cohost.yml  docker-compose.prod.yml  up-realmodel.sh  up.sh
src/inference_demo/: __init__.py  autoscaler.py  metrics.py  pool.py  scheduler.py  types.py
src/inference_demo/bench/: real_static_vs_continuous.py  static_vs_continuous.py
src/inference_demo/gateway/: app.py
src/inference_demo/sim/: worker.py
src/inference_demo/workers/: base.py  openai_worker.py  real_model_worker.py
tests/: test_autoscaler.py  test_bench.py  test_gateway.py  test_gateway_demo.py  test_metrics.py  test_openai_worker.py  test_pool.py  test_real_model_worker.py  test_scheduler.py  test_sim_worker.py  test_smoke.py
ui/: vite.config.ts
ui/src/: App.test.tsx  App.tsx  api.ts  glossary.ts  styles.css  testFixtures.ts  types.ts  vite-env.d.ts
ui/src/components/: AutoscalerPanel.tsx  BackendSelector.tsx  InfoTip.tsx  LoadGenControls.tsx  MetricCards.tsx  RecentRequests.tsx  StrategySwitcher.tsx  TimeSeriesChart.tsx  WorkerPoolView.tsx
