[project]
name = "inference-demo"
version = "0.1.0"
description = "A toy-scale but honest LLM inference control plane: router + autoscaler + live observability over continuous-batching workers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "prometheus-client>=0.20",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
]
# Phase 6 real-model worker (host-native, NOT installed in CI). Heavy: torch.
# Imported lazily; its on-device tests are gated behind the "realmodel" marker.
realmodel = [
    "torch>=2.2",
    "transformers>=4.44",
    "accelerate>=0.33",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inference_demo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q -m 'not realmodel'"
markers = [
    "realmodel: on-device tests needing the 'realmodel' extra (torch); deselected in CI",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

# Heavy optional deps (realmodel extra) — not installed in CI; lazily imported.
[[tool.mypy.overrides]]
module = ["torch.*", "transformers.*"]
ignore_missing_imports = true
